trunk/Archive2/d3/80ece46901e6b6/output
main.cpp:27:20: error: no matching constructor for initialization of 'container<int>'
    container<int> M(3, 3);
                   ^ ~~~~
main.cpp:7:14: note: candidate constructor not viable: requires single argument 'n', but 2 arguments were provided
    explicit container(std::size_t n) {
             ^
main.cpp:5:8: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 2 were provided
struct container {
       ^
main.cpp:5:8: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 2 were provided
1 error generated.
